[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-eyetracker-adhawk-microsystems"
version = "0.0.1"
description = "Extension package for PsychoPy which adds support for AdHawk Microrsystems eyetrackers."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Diako Mardanbegi", email = "diako@adhawkmicrosystems.com" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/adhawkmicrosystems/psychopy-eyetracker"
urls.changelog = "https://github.com/adhawkmicrosystems/psychopy-eyetracker/blob/main/CHANGELOG.txt"
urls.documentation = "https://github.com/adhawkmicrosystems/psychopy-eyetracker"
urls.repository = "https://github.com/adhawkmicrosystems/psychopy-eyetracker"
dependencies = [
]
[tool.setuptools.packages.find]
where = ["", "psychopy_eyetracker_adhawk_microsystems",]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
